Fix experiences picture element positioning bug
- Add position:absolute and positioning properties to picture.experience-image
- Fixes card layout break when <picture> elements are used
- Preserves behavior for both background-image and <picture>-based images

--- a/src/assets/css/modules/experiences.css
+++ b/src/assets/css/modules/experiences.css
@@ -143,6 +143,11 @@
 
 picture.experience-image {
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 picture.experience-image img {
